force-app/main/default/objects/Campos_de_golf__c/Campos_de_golf__c.object-meta.xml
<CustomObject>
    <label>Campo de golf</label>
    <nameField>
        <label>Campos de golf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campos de golf</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>