force-app/main/default/objects/Campos_de_golf__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <type>Address</type>
</CustomField>