force-app/main/default/objects/Campos_de_golf__c/fields/image_URL__c.field-meta.xml
<CustomField>
    <fullName>image_URL__c</fullName>
    <label>image URL</label>
    <type>Url</type>
</CustomField>