force-app/main/default/objects/Campos_de_golf__c/fields/Numero_de_hoyos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_hoyos__c</fullName>
    <label>Numero de hoyos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>