force-app/main/default/objects/Campos_de_golf__c/fields/Tipo_de_cesped__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cesped__c</fullName>
    <label>Tipo de cesped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agrostis</fullName>
            </value>
            <value>
                <fullName>Pasto Bermuda</fullName>
            </value>
            <value>
                <fullName>El Lolium perenne</fullName>
            </value>
            <value>
                <fullName>Zoysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>